--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.1",
   "description": "practising webpack",
   "scripts": {
-    "build": "webpack --mode=development"
+    "build": "webpack --mode=production",
+    "start": "webpack serve --mode=development"
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "core-js": "^3.24.1",
