--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.24.1",
+    "promise-polyfill": "^8.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.13.9"
